@@ -1,0 +1,21 @@
+{
+  "backup_data_uid": "cabb44aca9694d3f",
+  "backup_module_uid": "1dc07ee0f4742028",
+  "backup_module_uoa": "package",
+  "control": {
+    "author": "Grigori Fursin",
+    "author_email": "Grigori.Fursin@cTuning.org",
+    "author_webpage": "http://fursin.net",
+    "copyright": "See CK COPYRIGHT.txt for copyright details",
+    "engine": "CK",
+    "iso_datetime": "2017-04-18T16:31:31.163351",
+    "license": "See CK LICENSE.txt for licensing details",
+    "version": [
+      "1",
+      "8",
+      "7",
+      "1"
+    ]
+  },
+  "data_name": "perl-strawberry-5.24.1.1-win"
+}
