@@ -1,5 +1,6 @@
 * 2017.04.18 - added package to automatically download and install GCC 6.3.0 for Windows
                (needed for OpenBLAS + Caffe)
+             - added perl-strawberry-5.24.1.1-win (also for OpenBLAS on Windows)
 
 * 2017.04.17 - added support for AMD OpenCL lib
 
